starting to standardize with claude

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
@@ -49,16 +49,15 @@
     "jsons_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/' # directory where jsons created with figure are stored\n",
     "imgs_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/imgs/' # where images are stored\n",
     "\n",
-    "# # temp\n",
-    "# jsons_dir = '/Users/jnaiman/tmp//example_hists/jsons/' # directory where jsons created with figure are stored\n",
-    "# imgs_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/imgs/' # where images are stored\n",
+    "# for saving temp images for reading in\n",
+    "tmp_dir = '/Users/jnaiman/Downloads/tmp/'\n",
     "\n",
     "img_format = 'jpeg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "a2cf577c-4a80-4fbf-b4a0-8a0a61d16b61",
    "metadata": {},
    "outputs": [],
@@ -72,104 +71,109 @@
     "import re\n",
     "import pickle\n",
     "import os\n",
-    "from glob import glob"
+    "from glob import glob\n",
+    "\n",
+    "from sys import path\n",
+    "path.append('../')\n",
+    "from utils.llm_utils import parse_qa, load_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "9fc26f67-1869-44f7-97bb-238b2c5a42b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_image(image_path, fac=0.5):\n",
-    "    img = Image.open(image_path).convert('RGB')\n",
-    "    new_size = np.round(np.array(img.size)*fac).astype('int')\n",
-    "    img = img.resize(new_size, Image.Resampling.LANCZOS)\n",
-    "    #img = np.array(img)\n",
-    "    #with open(image_path, \"rb\") as image_file:\n",
-    "    img.save('/Users/jnaiman/Downloads/tmp/tmp_img.png')\n",
-    "    with open('/Users/jnaiman/Downloads/tmp/tmp_img.png','rb') as image_file:\n",
-    "        #return base64.b64encode(img).decode(\"utf-8\")\n",
-    "        return base64.b64encode(image_file.read()).decode(\"utf-8\")"
+    "# def load_image(image_path, fac=0.5):\n",
+    "#     img = Image.open(image_path).convert('RGB')\n",
+    "#     new_size = np.round(np.array(img.size)*fac).astype('int')\n",
+    "#     img = img.resize(new_size, Image.Resampling.LANCZOS)\n",
+    "#     #img = np.array(img)\n",
+    "#     #with open(image_path, \"rb\") as image_file:\n",
+    "#     img.save('/Users/jnaiman/Downloads/tmp/tmp_img.png')\n",
+    "#     with open('/Users/jnaiman/Downloads/tmp/tmp_img.png','rb') as image_file:\n",
+    "#         #return base64.b64encode(img).decode(\"utf-8\")\n",
+    "#         return base64.b64encode(image_file.read()).decode(\"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "fe835962-2db1-4c56-bdf4-50708fedaad7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parsing\n",
-    "def parse_qa(level_parse, plot_level, qa, j, types, \n",
-    "             partials = ['persona', 'context','question', 'format']):\n",
-    "    keys_tmp = list(j[level_parse][plot_level].keys())\n",
-    "    keys = []\n",
-    "    for k in keys_tmp:\n",
-    "        if '(' in k:\n",
-    "            k = k.split('(')[0].rstrip()\n",
-    "        keys.append(k)\n",
+    "# # parsing\n",
+    "# def parse_qa(level_parse, plot_level, qa, j, types, \n",
+    "#              partials = ['persona', 'context','question', 'format']):\n",
+    "#     keys_tmp = list(j[level_parse][plot_level].keys())\n",
+    "#     keys = []\n",
+    "#     for k in keys_tmp:\n",
+    "#         if '(' in k:\n",
+    "#             k = k.split('(')[0].rstrip()\n",
+    "#         keys.append(k)\n",
     "    \n",
-    "    keys = np.unique(keys).tolist()\n",
+    "#     keys = np.unique(keys).tolist()\n",
     "\n",
-    "    dirs_partials = {}\n",
+    "#     dirs_partials = {}\n",
     "    \n",
-    "    for k in keys:\n",
-    "        v = ''\n",
-    "        kk = ''\n",
-    "        for t in types:\n",
-    "            if k + \" \" + t in j[level_parse][plot_level]:\n",
-    "                v = j[level_parse][plot_level][k + \" \" + t]\n",
-    "                #kk = k + \" \" + t\n",
-    "                break\n",
-    "        if v == '':\n",
-    "            v = j[level_parse][plot_level][k]\n",
-    "            #kk = k\n",
-    "        if 'A' in v: # no plot\n",
-    "            if type(v['A']) == type({}):\n",
-    "                ans = list(v['A'].values())[0]\n",
-    "            else:\n",
-    "                ans = v['A']\n",
-    "            if type(v['Q']) == type({}):\n",
-    "                que = list(v['Q'].values())[0]\n",
-    "            else:\n",
-    "                que = v['Q']\n",
-    "            # get other elements\n",
-    "            for p in partials:\n",
-    "                dirs_partials[p] = v[p]\n",
-    "        else: # plotX\n",
-    "            for kk,vv in v.items():\n",
-    "                ans = vv['A']\n",
-    "                while type(ans) == type({}):\n",
-    "                    ans_1 = list(ans.values())[0]\n",
-    "                    if 'plot' in list(ans.keys())[0]:\n",
-    "                        ans = ans_1\n",
-    "                        break\n",
-    "                    ans = ans_1\n",
-    "                que = vv['Q']\n",
-    "                # get other elements\n",
-    "                for p in partials:\n",
-    "                    dirs_partials[p] = vv[p]\n",
-    "        out = {'Q':que, 'A':ans, 'Level':level_parse, 'type':plot_level, 'Response':\"\"}\n",
-    "        for kp,vp in dirs_partials.items():\n",
-    "            out[kp] = vp\n",
-    "        # if there is a plot\n",
-    "        if 'plot' in list(v.keys())[0]:\n",
-    "            out['plot number'] = list(v.keys())[0]\n",
-    "            #import sys; sys.exit()\n",
-    "        qa.append(out)\n",
-    "    return qa\n"
+    "#     for k in keys:\n",
+    "#         v = ''\n",
+    "#         kk = ''\n",
+    "#         for t in types:\n",
+    "#             if k + \" \" + t in j[level_parse][plot_level]:\n",
+    "#                 v = j[level_parse][plot_level][k + \" \" + t]\n",
+    "#                 #kk = k + \" \" + t\n",
+    "#                 break\n",
+    "#         if v == '':\n",
+    "#             v = j[level_parse][plot_level][k]\n",
+    "#             #kk = k\n",
+    "#         if 'A' in v: # no plot\n",
+    "#             if type(v['A']) == type({}):\n",
+    "#                 ans = list(v['A'].values())[0]\n",
+    "#             else:\n",
+    "#                 ans = v['A']\n",
+    "#             if type(v['Q']) == type({}):\n",
+    "#                 que = list(v['Q'].values())[0]\n",
+    "#             else:\n",
+    "#                 que = v['Q']\n",
+    "#             # get other elements\n",
+    "#             for p in partials:\n",
+    "#                 dirs_partials[p] = v[p]\n",
+    "#         else: # plotX\n",
+    "#             for kk,vv in v.items():\n",
+    "#                 ans = vv['A']\n",
+    "#                 while type(ans) == type({}):\n",
+    "#                     ans_1 = list(ans.values())[0]\n",
+    "#                     if 'plot' in list(ans.keys())[0]:\n",
+    "#                         ans = ans_1\n",
+    "#                         break\n",
+    "#                     ans = ans_1\n",
+    "#                 que = vv['Q']\n",
+    "#                 # get other elements\n",
+    "#                 for p in partials:\n",
+    "#                     dirs_partials[p] = vv[p]\n",
+    "#         out = {'Q':que, 'A':ans, 'Level':level_parse, 'type':plot_level, 'Response':\"\"}\n",
+    "#         for kp,vp in dirs_partials.items():\n",
+    "#             out[kp] = vp\n",
+    "#         # if there is a plot\n",
+    "#         if 'plot' in list(v.keys())[0]:\n",
+    "#             out['plot number'] = list(v.keys())[0]\n",
+    "#             #import sys; sys.exit()\n",
+    "#         qa.append(out)\n",
+    "#     return qa\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "9f95b5e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_img_json_pair(img_path, json_path, dir_api, \n",
+    "                      tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
     "                      fac = 1.0, \n",
     "                      restart = False, verbose = True):\n",
     "    \"\"\"\n",
@@ -190,7 +194,7 @@
     "    # do we have it?\n",
     "    try:\n",
     "        #image_path = '/Users/jnaiman/Downloads/data_full_v2/Picture'+str(int(iFile))+'.png'\n",
-    "        encoded_image = load_image(img_path, fac=fac)\n",
+    "        encoded_image = load_image(img_path, fac=fac, tmp_dir=tmp_dir)\n",
     "        # get questions\n",
     "        with open(json_path,'r') as f:\n",
     "            j = json.loads(f.read())\n",
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -270,7 +274,7 @@
     "            print(e)\n",
     "            new_fac = fac/iFac\n",
     "            print('new fac = ', new_fac)\n",
-    "            encoded_image = load_image(image_path,fac=new_fac)\n",
+    "            encoded_image = load_image(image_path,fac=new_fac, tmp_dir=tmp_dir)\n",
     "            iFac += 1\n",
     "    \n",
     "    if not test_run:\n",
@@ -388,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -441,7 +445,8 @@
     "    # get image and base json\n",
     "    img_path = imgs_dir + json_path.split('/')[-1].removesuffix('.json') + '.' + img_format\n",
     "    encoded_image, base_json, err = get_img_json_pair(img_path, json_path, dir_api, \n",
-    "                                                      fac=fac, restart=restart)\n",
+    "                                                      fac=fac, restart=restart,\n",
+    "                                                      tmp_dir=tmp_dir)\n",
     "\n",
     "    if err:\n",
     "        continue\n",
