including some rate limiting for claude

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "from sys import path\n",
     "path.append('../')\n",
-    "from utils.llm_utils import parse_qa, load_image"
+    "from utils.llm_utils import parse_qa, load_image, get_img_json_pair, parse_for_errors"
    ]
   },
   {
@@ -172,39 +172,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_img_json_pair(img_path, json_path, dir_api, \n",
-    "                      tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
-    "                      fac = 1.0, \n",
-    "                      restart = False, verbose = True):\n",
-    "    \"\"\"\n",
-    "    img_path : where image file is stored\n",
-    "    json_path : where json path is stored\n",
-    "    dir_api : where we can look for prior, saved pickles, if applicable\n",
-    "    fac : do we want to downsize the image? IF so, set to < 1\n",
+    "# def get_img_json_pair(img_path, json_path, dir_api, \n",
+    "#                       tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
+    "#                       fac = 1.0, \n",
+    "#                       restart = False, verbose = True):\n",
+    "#     \"\"\"\n",
+    "#     img_path : where image file is stored\n",
+    "#     json_path : where json path is stored\n",
+    "#     dir_api : where we can look for prior, saved pickles, if applicable\n",
+    "#     fac : do we want to downsize the image? IF so, set to < 1\n",
     "\n",
-    "    returns: encoded image, full json from creation run, error\n",
-    "      encoded image and full json are empty strings if error is True\n",
-    "    \"\"\"\n",
-    "    #print('on', iFile, 'of', iMax)\n",
-    "    err = False\n",
-    "    base_file = json_path.split('/')[-1].removesuffix('.json')\n",
-    "    if os.path.exists(dir_api + base_file + '.pickle') and not restart:\n",
-    "        if verbose: print('have file already:', dir_api + base_file + '.pickle')\n",
-    "        return '','', True\n",
-    "    # do we have it?\n",
-    "    try:\n",
-    "        #image_path = '/Users/jnaiman/Downloads/data_full_v2/Picture'+str(int(iFile))+'.png'\n",
-    "        encoded_image = load_image(img_path, fac=fac, tmp_dir=tmp_dir)\n",
-    "        # get questions\n",
-    "        with open(json_path,'r') as f:\n",
-    "            j = json.loads(f.read())\n",
-    "            j = json.loads(j)\n",
-    "    except Exception as e:\n",
-    "        if verbose: print('[ERROR]:', str(e))\n",
-    "        err = True\n",
-    "        return '','', True\n",
+    "#     returns: encoded image, full json from creation run, error\n",
+    "#       encoded image and full json are empty strings if error is True\n",
+    "#     \"\"\"\n",
+    "#     #print('on', iFile, 'of', iMax)\n",
+    "#     err = False\n",
+    "#     base_file = json_path.split('/')[-1].removesuffix('.json')\n",
+    "#     if os.path.exists(dir_api + base_file + '.pickle') and not restart:\n",
+    "#         if verbose: print('have file already:', dir_api + base_file + '.pickle')\n",
+    "#         return '','', True\n",
+    "#     # do we have it?\n",
+    "#     try:\n",
+    "#         #image_path = '/Users/jnaiman/Downloads/data_full_v2/Picture'+str(int(iFile))+'.png'\n",
+    "#         encoded_image = load_image(img_path, fac=fac, tmp_dir=tmp_dir)\n",
+    "#         # get questions\n",
+    "#         with open(json_path,'r') as f:\n",
+    "#             j = json.loads(f.read())\n",
+    "#             j = json.loads(j)\n",
+    "#     except Exception as e:\n",
+    "#         if verbose: print('[ERROR]:', str(e))\n",
+    "#         err = True\n",
+    "#         return '','', True\n",
     "    \n",
-    "    return encoded_image, j, err"
+    "#     return encoded_image, j, err"
    ]
   },
   {
@@ -216,6 +216,7 @@
    "source": [
     "def send_to_chatgpt(question_list, client, image_path, encoded_image,\n",
     "                    model =\"gpt-4o-mini\", \n",
+    "                    tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
     "                    test_run = True, fac=1.0, \n",
     "                    verbose=True):\n",
     "    #model=\"gpt-4\",\n",
@@ -231,7 +232,6 @@
     "    iFac = 1.0\n",
     "    #for question_list in qa:\n",
     "    success = False\n",
-    "    iFac = 1\n",
     "    #['persona', 'context','question', 'format']\n",
     "    while not success:\n",
     "        try:\n",
@@ -298,56 +298,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "b3cc147f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_for_errors(qa, verbose=True, print_what = 'prompt'):\n",
-    "    \"\"\"\n",
-    "    print_what : set to \"prompt\" to print full prompt, or \"question\" for just the question\n",
-    "    \"\"\"\n",
-    "    # try to fix\n",
-    "    for level in qa:\n",
-    "        noErr = False\n",
-    "        if 'Error' in level:\n",
-    "            noErr = True\n",
-    "            try:\n",
-    "                iters = []\n",
-    "                for x in re.finditer(r'//(\\s*)(.*)(\\s*)\\n', level['Response']):\n",
-    "                    #print(x)\n",
-    "                    iters.append(level['Response'][x.span()[0]:x.span()[1]])\n",
+    "# def parse_for_errors(qa, verbose=True, print_what = 'prompt'):\n",
+    "#     \"\"\"\n",
+    "#     print_what : set to \"prompt\" to print full prompt, or \"question\" for just the question\n",
+    "#     \"\"\"\n",
+    "#     # try to fix\n",
+    "#     for level in qa:\n",
+    "#         noErr = False\n",
+    "#         if 'Error' in level:\n",
+    "#             noErr = True\n",
+    "#             try:\n",
+    "#                 iters = []\n",
+    "#                 for x in re.finditer(r'//(\\s*)(.*)(\\s*)\\n', level['Response']):\n",
+    "#                     #print(x)\n",
+    "#                     iters.append(level['Response'][x.span()[0]:x.span()[1]])\n",
     "                \n",
-    "                response = level['Response']\n",
-    "                for i in iters:\n",
-    "                    response = response.replace(i,'')\n",
-    "                level['Response'] = response\n",
-    "                del level['Error']\n",
-    "            except:\n",
-    "                noErr = False\n",
-    "                print('********')\n",
-    "                print('couldnt fix:', level['Response'])\n",
-    "                print('********')\n",
-    "                pass\n",
+    "#                 response = level['Response']\n",
+    "#                 for i in iters:\n",
+    "#                     response = response.replace(i,'')\n",
+    "#                 level['Response'] = response\n",
+    "#                 del level['Error']\n",
+    "#             except:\n",
+    "#                 noErr = False\n",
+    "#                 print('********')\n",
+    "#                 print('couldnt fix:', level['Response'])\n",
+    "#                 print('********')\n",
+    "#                 pass\n",
     "    \n",
-    "        try:\n",
-    "            if type(level['Response']) != type({}):\n",
-    "                level['Response'] = json.loads(level['Response'])\n",
-    "        except:\n",
-    "            pass\n",
+    "#         try:\n",
+    "#             if type(level['Response']) != type({}):\n",
+    "#                 level['Response'] = json.loads(level['Response'])\n",
+    "#         except:\n",
+    "#             pass\n",
     "    \n",
-    "        if not noErr and verbose:\n",
-    "            if print_what == 'question':\n",
-    "                print('Q:', level['Q'])\n",
-    "            elif print_what == 'prompt':\n",
-    "                print('Q:', level['prompt'])\n",
-    "            print('ChatGPT A:', level['Response'])\n",
-    "            print('Real A:   ', level['A'])\n",
+    "#         if not noErr and verbose:\n",
+    "#             if print_what == 'question':\n",
+    "#                 print('Q:', level['Q'])\n",
+    "#             elif print_what == 'prompt':\n",
+    "#                 print('Q:', level['prompt'])\n",
+    "#             print('ChatGPT A:', level['Response'])\n",
+    "#             print('Real A:   ', level['A'])\n",
     "\n",
-    "            print('')\n",
-    "            #if 'Error' in level:\n",
-    "            #    import sys; sys.exit()\n",
-    "    return qa"
+    "#             print('')\n",
+    "#             #if 'Error' in level:\n",
+    "#             #    import sys; sys.exit()\n",
+    "#     return qa"
    ]
   },
   {
@@ -444,7 +444,7 @@
     "\n",
     "    # get image and base json\n",
     "    img_path = imgs_dir + json_path.split('/')[-1].removesuffix('.json') + '.' + img_format\n",
-    "    encoded_image, base_json, err = get_img_json_pair(img_path, json_path, dir_api, \n",
+    "    encoded_image, _, base_json, err = get_img_json_pair(img_path, json_path, dir_api, \n",
     "                                                      fac=fac, restart=restart,\n",
     "                                                      tmp_dir=tmp_dir)\n",
     "\n",
