chatgpt also include raw answer

--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -280,6 +280,7 @@
     "    if not test_run:\n",
     "        # Get the response from the API\n",
     "        answer = response.choices[0].message.content\n",
+    "        question_list['raw answer'] = answer\n",
     "        # format answer\n",
     "        answer_format = answer.replace(\"```json\\n\",'').replace(\"\\n```\",'')\n",
     "        try:\n",
