--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "a384e543",
    "metadata": {},
    "outputs": [],
@@ -11,9 +11,9 @@
     "fullproc_r = './resources/' # for words/names\n",
     "\n",
     "# where to save the figures that are created\n",
-    "#fake_figs_dir = './example_hists/' # saving in github only for small numbers\n",
+    "fake_figs_dir = './example_hists/' # saving in github only for small numbers\n",
     "# stop overwriting what is there\n",
-    "fake_figs_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/example_hists/'\n",
+    "#fake_figs_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/example_hists/'\n",
     "\n",
     "# format for saving images?\n",
     "img_format = ['pdf','jpeg']\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "id": "82acb676",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "id": "4d785d10",
    "metadata": {},
    "outputs": [],
@@ -2046,85 +2046,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 54,
    "id": "c4c42070",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Level 1': {'Figure-level questions': {},\n",
-       "  'Plot-level questions': {'nbars ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       "     'A': {'nbars ': 50},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'How many bars are there in the specified figure panel?',\n",
-       "     'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.'}}}},\n",
-       " 'Level 2': {'Plot-level questions': {'minimum ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "     'A': {'minimum ': {'minimum x': np.float64(-0.12704837263757474)}},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'What are the minimum data values in this figure panel? ',\n",
-       "     'format': 'Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.'}},\n",
-       "   'maximum ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "     'A': {'maximum ': {'maximum x': np.float64(-0.08480166600483141)}},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'What are the maximum data values in this figure panel? ',\n",
-       "     'format': 'Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.'}},\n",
-       "   'median ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "     'A': {'median ': {'median x': np.float64(-0.11200063032429743)}},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'What are the median data values in this figure panel? ',\n",
-       "     'format': 'Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.'}},\n",
-       "   'mean ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "     'A': {'mean ': {'mean x': np.float64(-0.11103424205083973)}},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'What are the mean data values in this figure panel? ',\n",
-       "     'format': 'Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.'}}}},\n",
-       " 'Level 3': {'Plot-level questions': {'ngaussians ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
-       "     'A': {'ngaussians ': 5},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'How many gaussians were used to generate the data for the plot in the figure panel?',\n",
-       "     'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}}}}}"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "datas['VQA']"
+    "#datas['VQA']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "id": "75173cda-2b70-4b78-8495-3e45ea9e9828",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'nbars ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       "   'A': {'nbars ': 50},\n",
-       "   'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "   'context': '',\n",
-       "   'question': 'How many bars are there in the specified figure panel?',\n",
-       "   'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.'}}}"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "datas['VQA']['Level 1']['Plot-level questions']"
+    "#datas['VQA']['Level 1']['Plot-level questions']"
    ]
   },
   {
@@ -2137,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "036df21d",
    "metadata": {},
    "outputs": [],
@@ -2208,18 +2145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "id": "a25a5dc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'nbars ': {'plot0': {'Q': 'How many bars are there on the figure? You are a helpful assistant, please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       "   'A': {'nbars ': 50}}}}"
+       "{'nbars ': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       "   'A': {'nbars ': 50},\n",
+       "   'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "   'context': '',\n",
+       "   'question': 'How many bars are there in the specified figure panel?',\n",
+       "   'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.'}}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
