--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a2cf577c-4a80-4fbf-b4a0-8a0a61d16b61",
    "metadata": {},
    "outputs": [],
@@ -80,136 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9fc26f67-1869-44f7-97bb-238b2c5a42b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def load_image(image_path, fac=0.5):\n",
-    "#     img = Image.open(image_path).convert('RGB')\n",
-    "#     new_size = np.round(np.array(img.size)*fac).astype('int')\n",
-    "#     img = img.resize(new_size, Image.Resampling.LANCZOS)\n",
-    "#     #img = np.array(img)\n",
-    "#     #with open(image_path, \"rb\") as image_file:\n",
-    "#     img.save('/Users/jnaiman/Downloads/tmp/tmp_img.png')\n",
-    "#     with open('/Users/jnaiman/Downloads/tmp/tmp_img.png','rb') as image_file:\n",
-    "#         #return base64.b64encode(img).decode(\"utf-8\")\n",
-    "#         return base64.b64encode(image_file.read()).decode(\"utf-8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe835962-2db1-4c56-bdf4-50708fedaad7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # parsing\n",
-    "# def parse_qa(level_parse, plot_level, qa, j, types, \n",
-    "#              partials = ['persona', 'context','question', 'format']):\n",
-    "#     keys_tmp = list(j[level_parse][plot_level].keys())\n",
-    "#     keys = []\n",
-    "#     for k in keys_tmp:\n",
-    "#         if '(' in k:\n",
-    "#             k = k.split('(')[0].rstrip()\n",
-    "#         keys.append(k)\n",
-    "    \n",
-    "#     keys = np.unique(keys).tolist()\n",
-    "\n",
-    "#     dirs_partials = {}\n",
-    "    \n",
-    "#     for k in keys:\n",
-    "#         v = ''\n",
-    "#         kk = ''\n",
-    "#         for t in types:\n",
-    "#             if k + \" \" + t in j[level_parse][plot_level]:\n",
-    "#                 v = j[level_parse][plot_level][k + \" \" + t]\n",
-    "#                 #kk = k + \" \" + t\n",
-    "#                 break\n",
-    "#         if v == '':\n",
-    "#             v = j[level_parse][plot_level][k]\n",
-    "#             #kk = k\n",
-    "#         if 'A' in v: # no plot\n",
-    "#             if type(v['A']) == type({}):\n",
-    "#                 ans = list(v['A'].values())[0]\n",
-    "#             else:\n",
-    "#                 ans = v['A']\n",
-    "#             if type(v['Q']) == type({}):\n",
-    "#                 que = list(v['Q'].values())[0]\n",
-    "#             else:\n",
-    "#                 que = v['Q']\n",
-    "#             # get other elements\n",
-    "#             for p in partials:\n",
-    "#                 dirs_partials[p] = v[p]\n",
-    "#         else: # plotX\n",
-    "#             for kk,vv in v.items():\n",
-    "#                 ans = vv['A']\n",
-    "#                 while type(ans) == type({}):\n",
-    "#                     ans_1 = list(ans.values())[0]\n",
-    "#                     if 'plot' in list(ans.keys())[0]:\n",
-    "#                         ans = ans_1\n",
-    "#                         break\n",
-    "#                     ans = ans_1\n",
-    "#                 que = vv['Q']\n",
-    "#                 # get other elements\n",
-    "#                 for p in partials:\n",
-    "#                     dirs_partials[p] = vv[p]\n",
-    "#         out = {'Q':que, 'A':ans, 'Level':level_parse, 'type':plot_level, 'Response':\"\"}\n",
-    "#         for kp,vp in dirs_partials.items():\n",
-    "#             out[kp] = vp\n",
-    "#         # if there is a plot\n",
-    "#         if 'plot' in list(v.keys())[0]:\n",
-    "#             out['plot number'] = list(v.keys())[0]\n",
-    "#             #import sys; sys.exit()\n",
-    "#         qa.append(out)\n",
-    "#     return qa\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f95b5e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_img_json_pair(img_path, json_path, dir_api, \n",
-    "#                       tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
-    "#                       fac = 1.0, \n",
-    "#                       restart = False, verbose = True):\n",
-    "#     \"\"\"\n",
-    "#     img_path : where image file is stored\n",
-    "#     json_path : where json path is stored\n",
-    "#     dir_api : where we can look for prior, saved pickles, if applicable\n",
-    "#     fac : do we want to downsize the image? IF so, set to < 1\n",
-    "\n",
-    "#     returns: encoded image, full json from creation run, error\n",
-    "#       encoded image and full json are empty strings if error is True\n",
-    "#     \"\"\"\n",
-    "#     #print('on', iFile, 'of', iMax)\n",
-    "#     err = False\n",
-    "#     base_file = json_path.split('/')[-1].removesuffix('.json')\n",
-    "#     if os.path.exists(dir_api + base_file + '.pickle') and not restart:\n",
-    "#         if verbose: print('have file already:', dir_api + base_file + '.pickle')\n",
-    "#         return '','', True\n",
-    "#     # do we have it?\n",
-    "#     try:\n",
-    "#         #image_path = '/Users/jnaiman/Downloads/data_full_v2/Picture'+str(int(iFile))+'.png'\n",
-    "#         encoded_image = load_image(img_path, fac=fac, tmp_dir=tmp_dir)\n",
-    "#         # get questions\n",
-    "#         with open(json_path,'r') as f:\n",
-    "#             j = json.loads(f.read())\n",
-    "#             j = json.loads(j)\n",
-    "#     except Exception as e:\n",
-    "#         if verbose: print('[ERROR]:', str(e))\n",
-    "#         err = True\n",
-    "#         return '','', True\n",
-    "    \n",
-    "#     return encoded_image, j, err"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -219,23 +90,18 @@
     "                    tmp_dir = '/Users/jnaiman/Downloads/tmp/',\n",
     "                    test_run = True, fac=1.0, \n",
     "                    verbose=True):\n",
+    "    # models as of ~May 2024\n",
     "    #model=\"gpt-4\",\n",
     "    #model=\"gpt-4o\",\n",
     "    #model =\"gpt-4o-mini\",\n",
     "    #model =\"gpt-3.5-turbo\",\n",
     "    #model=\"gpt-3.5-turbo-instruct\",\n",
     "\n",
-    "    # query chatgpt\n",
-    "    #responses = []\n",
-    "\n",
-    "    #try:\n",
-    "    iFac = 1.0\n",
-    "    #for question_list in qa:\n",
+    "    iFac = 1.0 # just in case we want to progressively make the image smaller\n",
     "    success = False\n",
-    "    #['persona', 'context','question', 'format']\n",
     "    while not success:\n",
     "        try:\n",
-    "            #question = question_list['Q']\n",
+    "            # current question format is: ['persona', 'context','question', 'format'] (see readme in example_hists)\n",
     "            question = question_list['context'] + \" \" + question_list['question'] + \" \" + question_list['format']\n",
     "            # lowercase the first word, just in case\n",
     "            question = question.lstrip() # no whitespace\n",
@@ -244,7 +110,6 @@
     "            # Prepare the API request\n",
     "            prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
     "            prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
-    "            ##question_list['prompt'] = prompt\n",
     "            \n",
     "            if not test_run:\n",
     "                # Send the request to the GPT-4o API\n",
@@ -299,61 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b3cc147f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def parse_for_errors(qa, verbose=True, print_what = 'prompt'):\n",
-    "#     \"\"\"\n",
-    "#     print_what : set to \"prompt\" to print full prompt, or \"question\" for just the question\n",
-    "#     \"\"\"\n",
-    "#     # try to fix\n",
-    "#     for level in qa:\n",
-    "#         noErr = False\n",
-    "#         if 'Error' in level:\n",
-    "#             noErr = True\n",
-    "#             try:\n",
-    "#                 iters = []\n",
-    "#                 for x in re.finditer(r'//(\\s*)(.*)(\\s*)\\n', level['Response']):\n",
-    "#                     #print(x)\n",
-    "#                     iters.append(level['Response'][x.span()[0]:x.span()[1]])\n",
-    "                \n",
-    "#                 response = level['Response']\n",
-    "#                 for i in iters:\n",
-    "#                     response = response.replace(i,'')\n",
-    "#                 level['Response'] = response\n",
-    "#                 del level['Error']\n",
-    "#             except:\n",
-    "#                 noErr = False\n",
-    "#                 print('********')\n",
-    "#                 print('couldnt fix:', level['Response'])\n",
-    "#                 print('********')\n",
-    "#                 pass\n",
-    "    \n",
-    "#         try:\n",
-    "#             if type(level['Response']) != type({}):\n",
-    "#                 level['Response'] = json.loads(level['Response'])\n",
-    "#         except:\n",
-    "#             pass\n",
-    "    \n",
-    "#         if not noErr and verbose:\n",
-    "#             if print_what == 'question':\n",
-    "#                 print('Q:', level['Q'])\n",
-    "#             elif print_what == 'prompt':\n",
-    "#                 print('Q:', level['prompt'])\n",
-    "#             print('ChatGPT A:', level['Response'])\n",
-    "#             print('Real A:   ', level['A'])\n",
-    "\n",
-    "#             print('')\n",
-    "#             #if 'Error' in level:\n",
-    "#             #    import sys; sys.exit()\n",
-    "#     return qa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -369,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -381,7 +192,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/nclust_2_trial0.json']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -401,9 +212,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on 0 of 2\n",
+      "on 0 of 3\n",
       "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle\n",
-      "on 1 of 2\n",
+      "on 1 of 3\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle\n",
+      "on 2 of 3\n",
       "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "   on question: what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
@@ -416,21 +229,21 @@
       "\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
       "ChatGPT A: {'maximum x': 0.5}\n",
-      "Real A:    0.531999058363311\n",
+      "Real A:    0.579999216258835\n",
       "\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "ChatGPT A: {'minimum x': 0.0}\n",
-      "Real A:    -0.44113410366866\n",
+      "ChatGPT A: {'minimum x': 0.3}\n",
+      "Real A:    0.21969474038591721\n",
       "\n",
       "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
-      "ChatGPT A: {'ngaussians': 5}\n",
-      "Real A:    5\n",
+      "ChatGPT A: {'ngaussians': '5'}\n",
+      "Real A:    2\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "iMax = 2\n",
+    "iMax = 3\n",
     "verbose = False\n",
     "test_run = False # run w/o actually pinging openai\n",
     "restart = False\n",
@@ -507,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "id": "6974b8e2",
    "metadata": {},
    "outputs": [
@@ -515,10 +328,11 @@
      "data": {
       "text/plain": [
        "['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle',\n",
-       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle']"
+       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle',\n",
+       " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_2_trial0.pickle']"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,19 +344,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "id": "636df058",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ifile = 0\n",
+    "ifile = 2\n",
     "with open(pickles[ifile], 'rb') as f:\n",
     "    qa_in = pickle.load(f)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "id": "11948f2b",
    "metadata": {},
    "outputs": [
@@ -550,31 +364,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle\n",
+      "/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_2_trial0.pickle\n",
       "*********\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "   Real A: 50\n",
       "ChatGPT A: {'nbars': 20}\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: 0.531999058363311\n",
+      "   Real A: 0.579999216258835\n",
       "ChatGPT A: {'maximum x': 0.5}\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: -0.03567869693057275\n",
-      "ChatGPT A: I'm unable to analyze the specific data values from the figure panel to compute the mean. However, if you have the data values available, I can help you calculate the mean. Please provide the relevant data points.\n",
+      "   Real A: 0.3471408294007481\n",
+      "ChatGPT A: I'm unable to analyze specific data values in the plot directly. To calculate the mean value of the histogram's x-axis data, you would typically sum all the x-values, multiply by their frequencies, and then divide by the total count of data points. \n",
+      "\n",
+      "If you can provide the data values used to create the histogram, I can assist you further.\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: -0.11391004457919605\n",
-      "ChatGPT A: I'm unable to extract specific data values directly from images, including figures and plots. However, if you provide me with the data points or additional context, I can assist you in calculating the median or any other statistics you need.\n",
+      "   Real A: 0.33172813565120185\n",
+      "ChatGPT A: I'm unable to extract or calculate specific data values from images. If you have the data used for creating the plot, I can help you calculate the median. Please provide the data values, and I'll assist you with the calculation.\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   Real A: -0.44113410366866\n",
-      "ChatGPT A: {'minimum x': 0.0}\n",
+      "   Real A: 0.21969474038591721\n",
+      "ChatGPT A: {'minimum x': 0.3}\n",
       "\n",
       "Prompt: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
-      "   Real A: 5\n",
-      "ChatGPT A: {'ngaussians': 5}\n",
+      "   Real A: 2\n",
+      "ChatGPT A: {'ngaussians': '5'}\n",
       "\n"
      ]
     }
